[package]
name = "path_tracer_cpu"
version = "0.1.0"
authors = ["Samuel Mott <samuel.e.mott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num = "0.3.0"
threadpool = "1.8.1"
crossbeam = "0.7.3"
image = "0.23.6"
num_cpus = "1.13.0"
ultraviolet = "0.4.6"
