[package]
name = "path_tracer_cpu"
version = "0.1.0"
authors = ["Samuel Mott <samuel.e.mott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
num = "0.3.0"
crossbeam = "0.7.3"
image = "0.23.6"
ultraviolet = "0.4.6"
rayon = "1.3.1"
chrono = "0.4.13"
